Fix T62506: Erasing blank annotation layer activates Move operator

If you try to erase empty annotations, the operator is canceled.

The message is necessary to avoid the keymap is captured by the next keymap in the stack.